--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Welcome</title>
 </head>
 <body>
-  <h1>Hello from Clarissa!</h1>
-  <p>This is my GitHub Pages site.</p>
+  <h1>Hello! My name is Clarissa!</h1>
+  <p>This is my GitHub Pages site😺</p>
 </body>
 </html>
