--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -49,13 +49,13 @@
       <p>
         The internet is built on layered technologies that enable computers to
         communicate. One of the most important is the Hypertext Transfer Protocol (HTTP).
-        Whether streaming video, clicking links, or shopping online, HTTP facilitates
-        The requests and responses that make the web possible. This site summarizes the
+        Whether streaming video, clicking links, or shopping online, HTTP handles
+        the requests and responses that make the web possible. This site summarizes the
         origins, evolution, and current/future directions of HTTP.
       </p>
     </section>
 
-    <!-- Key Terms (table-of-contents-like) -->
+    <!-- Key Terms (table of contents like) -->
     <section>
       <h2>Key Terms</h2>
       <ul>
@@ -74,7 +74,7 @@
         <thead>
           <tr>
             <th>Page</th>
-            <th>What you'll find</th>
+            <th>Description</th>
           </tr>
         </thead>
         <tbody>
