--- a/index.html
+++ b/index.html
@@ -1,16 +1,3 @@
-  <!--
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Welcome</title>
-</head>
-<body>
-  <h1>The Evolution and Importance of HTTP in the World Wide Web
-</h1>
-  <p>This is my GitHub Pages site😺</p>
-</body>
-</html>
--->
 
 <!DOCTYPE html>
 <html>
@@ -45,7 +32,7 @@
   <main class="container">
     <!-- Abstract / Intro -->
     <section>
-      <h2>Abstract</h2>
+      <h2>Description</h2>
       <p>
         The internet is built on layered technologies that enable computers to
         communicate. One of the most important is the Hypertext Transfer Protocol (HTTP).
