--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <nav class="menu">
       <!-- Main menu (consistent on every page) -->
       <a href="index.html">Home</a>
-      <a href="topic1.html">Origins & Early HTTP</a>
-      <a href="topic2.html">Modern Evolution & Future</a>
-      <a href="concepts.html">Key Concepts</a>
-      <a href="references.html">References</a>
-      <a href="about.html">About</a>
+      <a href="Topic1.html">Origins & Early HTTP</a>
+      <a href="Topic2.html">Modern Evolution & Future</a>
+      <a href="Concepts.html">Key Concepts</a>
+      <a href="References.html">References</a>
+      <a href="About.html">About</a>
     </nav>
   </header>
 
