--- a/Topic1.html
+++ b/Topic1.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Topic 1: HTTP History</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="topic1.html">Topic 1</a>
+        <a href="topic2.html">Topic 2</a>
+        <a href="key_concepts.html">Key Concepts</a>
+        <a href="about.html">About</a>
+        <a href="references.html">References</a>
+    </nav>
 
+    <main>
+        <h1>HTTP History & Early Versions</h1>
+        <p>HTTP (Hypertext Transfer Protocol) allows browsers and servers to communicate. It was created in the late 1980s and early 1990s by Tim Berners-Lee at CERN.</p>
+
+        <p>The first version, HTTP/0.9 (1991), was simple and only handled text. HTTP/1.0 (1996) added headers, supported images and videos, and introduced error codes like 404 Not Found.</p>
+    </main>
+
+    <footer>
+        Class Project - <a href="https://ksuweb.github.io/IT3203/" target="_blank">IT 3203 Web Development</a>
+    </footer>
+</body>
+</html>
