--- a/Topic2.html
+++ b/Topic2.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Topic 2: HTTP Versions</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="topic1.html">Topic 1</a>
+        <a href="topic2.html">Topic 2</a>
+        <a href="key_concepts.html">Key Concepts</a>
+        <a href="about.html">About</a>
+        <a href="references.html">References</a>
+    </nav>
 
+    <main>
+        <h1>HTTP/1.1, HTTP/2, HTTP/3 & HTTPS</h1>
+        <p>HTTP/1.1 (1997) introduced persistent connections and better error handling, making websites load faster. HTTP/2 (2015) added multiplexing, header compression, and resource prioritization.</p>
+
+        <p>HTTP/3 (2022) uses QUIC, based on UDP, reducing latency and improving mobile performance. HTTPS encrypts communication, protecting user data and improving trust.</p>
+    </main>
+
+    <footer>
+        Class Project - <a href="https://ksuweb.github.io/IT3203/" target="_blank">IT 3203 Web Development</a>
+    </footer>
+</body>
+</html>
