--- a/Concepts.html
+++ b/Concepts.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Key Concepts</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="topic1.html">Topic 1</a>
+        <a href="topic2.html">Topic 2</a>
+        <a href="key_concepts.html">Key Concepts</a>
+        <a href="about.html">About</a>
+        <a href="references.html">References</a>
+    </nav>
 
+    <main>
+        <h1>Key Concepts</h1>
+        <ul>
+            <li><strong>HTTP:</strong> Protocol for browser-server communication.</li>
+            <li><strong>HTTPS:</strong> Secure HTTP using encryption (SSL/TLS).</li>
+            <li><strong>Persistent Connections:</strong> Reuse connections to speed up websites.</li>
+            <li><strong>Multiplexing:</strong> Multiple requests over one connection (HTTP/2).</li>
+            <li><strong>QUIC:</strong> Transport protocol for HTTP/3 to reduce latency.</li>
+            <li><strong>Headers:</strong> Extra info sent with requests/responses.</li>
+            <li><strong>Error Codes:</strong> Messages like 404 Not Found.</li>
+        </ul>
+    </main>
+
+    <footer>
+        Class Project - <a href="https://ksuweb.github.io/IT3203/" target="_blank">IT 3203 Web Development</a>
+    </footer>
+</body>
+</html>
