--- a/About.html
+++ b/About.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>About</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="topic1.html">Topic 1</a>
+        <a href="topic2.html">Topic 2</a>
+        <a href="key_concepts.html">Key Concepts</a>
+        <a href="about.html">About</a>
+        <a href="references.html">References</a>
+    </nav>
 
+    <main>
+        <h1>About Me</h1>
+        <p>Hi! I'm Clarissa Allen, a student in Intro to Web Development. This project demonstrates basic HTML and CSS skills using the topic of HTTP.</p>
+    </main>
+
+    <footer>
+        Class Project - <a href="https://ksuweb.github.io/IT3203/" target="_blank">IT 3203 Web Development</a>
+    </footer>
+</body>
+</html>
