--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
         <h2>Table of Contents</h2>
         <ul>
-            <li><a href="topic1.html">Topic 1: HTTP History & Early Versions</a></li>
-            <li><a href="topic2.html">Topic 2: HTTP/1.1, HTTP/2, HTTP/3 & HTTPS</a></li>
-            <li><a href="key_concepts.html">Key Concepts</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="references.html">References</a></li>
+            <li><a href="Topic1.html">Topic 1: HTTP History & Early Versions</a></li>
+            <li><a href="Topic2.html">Topic 2: HTTP/1.1, HTTP/2, HTTP/3 & HTTPS</a></li>
+            <li><a href="Concepts.html">Key Concepts</a></li>
+            <li><a href="About.html">About Me</a></li>
+            <li><a href="References.html">References</a></li>
         </ul>
     </main>
 
