--- a/References.html
+++ b/References.html
@@ -8,11 +8,11 @@
 <body>
     <nav>
         <a href="index.html">Home</a>
-        <a href="topic1.html">Topic 1</a>
-        <a href="topic2.html">Topic 2</a>
-        <a href="key_concepts.html">Key Concepts</a>
-        <a href="about.html">About</a>
-        <a href="references.html">References</a>
+        <a href="Topic1.html">Topic 1</a>
+        <a href="Topic2.html">Topic 2</a>
+        <a href="Concepts.html">Key Concepts</a>
+        <a href="About.html">About</a>
+        <a href="References.html">References</a>
     </nav>
 
     <main>
