--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,7 @@
 
     <main>
         <h1>The Evolution and Importance of HTTP</h1>
-        <p>Hello! This website explores HTTP, the protocol that makes this web possible. You will learn about its history, versions, key concepts, and future directions.</p>
+        <p>Welcome! This website explores HTTP, the protocol that makes the web possible. You will learn about its history, versions, key concepts, and future directions.</p>
 
         <h2>Table of Contents</h2>
         <ul>
@@ -30,9 +30,7 @@
     </main>
 
     <footer>
-        Clarissa Allen Class Project - <a href="https://ksuweb.github.io/IT3203/" target="_blank">IT 3203 Web Development</a>
+        Class Project - <a href="https://ksuweb.github.io/IT3203/" target="_blank">IT 3203 Web Development</a>
     </footer>
-</body>
-</html>
 </body>
 </html>
