--- a/Topic1.html
+++ b/Topic1.html
@@ -17,9 +17,11 @@
 
     <main>
         <h1>HTTP History & Early Versions</h1>
-        <p>HTTP (Hypertext Transfer Protocol) allows browsers and servers to communicate. It was created in the late 1980s and early 1990s by Tim Berners-Lee at CERN.</p>
+        <p>HTTP (Hypertext Transfer Protocol) is the language that web browsers and servers use to communicate. It allows your browser to request information and servers to respond with web pages, images, videos, and more (Wilde, 2025).</p>
 
-        <p>The first version, HTTP/0.9 (1991), was simple and only handled text. HTTP/1.0 (1996) added headers, supported images and videos, and introduced error codes like 404 Not Found.</p>
+        <p>HTTP was created in the late 1980s and early 1990s by Tim Berners-Lee at CERN as part of his invention of the World Wide Web. He needed a way for computers to share documents using hyperlinks, which led to the creation of the first HTTP version, <strong>HTTP/0.9</strong> in 1991. This version was extremely simple, only handling basic text and allowing one-line requests.</p>
+
+        <p>As more people used the internet, the need for more complex functionality arose. <strong>HTTP/1.0</strong>, introduced in 1996, supported different file types like images and videos, headers for extra information, and error codes such as 404 Not Found. These changes allowed websites to become interactive and support multimedia content (Wikipedia, 2025).</p>
     </main>
 
     <footer>
