--- a/Topic2.html
+++ b/Topic2.html
@@ -17,9 +17,13 @@
 
     <main>
         <h1>HTTP/1.1, HTTP/2, HTTP/3 & HTTPS</h1>
-        <p>HTTP/1.1 (1997) introduced persistent connections and better error handling, making websites load faster. HTTP/2 (2015) added multiplexing, header compression, and resource prioritization.</p>
+        <p><strong>HTTP/1.1</strong>, introduced in 1997, solved many problems from HTTP/1.0, allowing multiple requests over the same connection. Features like caching controls, chunked transfer, and improved error handling made websites load faster (W3C, 1999).</p>
 
-        <p>HTTP/3 (2022) uses QUIC, based on UDP, reducing latency and improving mobile performance. HTTPS encrypts communication, protecting user data and improving trust.</p>
+        <p>HTTP/2 (2015) improved speed and efficiency even more. It introduced <strong>multiplexing</strong>, header compression, and resource prioritization, reducing delays and making web experiences smoother. Many top websites, including Google, Facebook, and Netflix, rely on HTTP/2 to deliver fast content to billions of users worldwide (Cloudflare, 2023).</p>
+
+        <p>HTTP/3 (2022) uses <strong>QUIC</strong> built on UDP rather than TCP. It reduces latency, especially on mobile networks, and supports real-time applications like video conferencing, online gaming, and streaming. As adoption grows, HTTP/3 promises faster, more reliable web experiences (Thomson, 2022).</p>
+
+        <p><strong>HTTPS</strong> encrypts communications using SSL/TLS, protecting user data and providing trust indicators like the padlock icon in browsers. Many major websites have switched entirely to HTTPS to improve security, SEO, and user confidence (Rescorla, 2018).</p>
     </main>
 
     <footer>
