--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@
 
     <main>
         <h1>About Me</h1>
-        <p>Hi! I'm Clarissa Allen, a student in Intro to Web Development. This project demonstrates basic HTML and CSS skills using the topic of HTTP.</p>
+        <p>Hi! I'm Clarissa Allen, a student in Intro to Web Development. This project demonstrates basic HTML and CSS skills using the topic of HTTP. It’s designed for a clean, readable, and modern look with Poppins font.</p>
     </main>
 
     <footer>
