--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@
 
     <main>
         <h1>About Me</h1>
-        <p>Hi! I'm Clarissa Allen, a student in Intro to Web Development. This project demonstrates basic HTML and CSS skills using the topic of HTTP. It’s designed for a clean, readable, and modern look with Poppins font.</p>
+        <p>Hi! I'm Clarissa Allen. I am currently enrolled at KSU pursuing a degree in Information Technology. I am currently taking this in Intro to Web Development to enhance my web-making skills and to learn more about html! This project demonstrates basic HTML and CSS skills using the topic of HTTP. It’s designed to be clean and readable! I hope you enjoy and learn more!</p>
     </main>
 
     <footer>
