--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>HTTP Evolution</title>
+    <!-- incorporates the CSS on the page -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- navigation bar on the top of the screen to get to the other pages -->
     <nav>
         <a href="index.html">Home</a>
         <a href="Topic1.html">Topic 1</a>
@@ -16,9 +18,11 @@
     </nav>
 
     <main>
+        <!-- Main heading on the page -->
         <h1>The Evolution and Importance of HTTP</h1>
         <p>Welcome! This website explores HTTP, the protocol that makes the web possible. You will learn about its history, versions, key concepts, and future directions.</p>
 
+        <!-- Table of contents that also leads to the other pages with each title -->
         <h2>Table of Contents</h2>
         <ul>
             <li><a href="Topic1.html">Topic 1: HTTP History & Early Versions</a></li>
@@ -28,7 +32,8 @@
             <li><a href="References.html">References</a></li>
         </ul>
     </main>
-
+    
+    <!-- Footer that leads to the KSU IT3203 page -->
     <footer>
         Class Project - <a href="https://ksuweb.github.io/IT3203/" target="_blank">IT 3203 Web Development</a>
     </footer>
