--- a/Topic2.html
+++ b/Topic2.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- Nav bar to get to the other pages -->
     <nav>
         <a href="index.html">Home</a>
         <a href="Topic1.html">Topic 1</a>
@@ -14,7 +16,8 @@
         <a href="About.html">About</a>
         <a href="References.html">References</a>
     </nav>
-
+    
+    <!-- Paragraphs from my HTML paper are included here -->
     <main>
         <h1>HTTP/1.1, HTTP/2, HTTP/3 & HTTPS</h1>
         <p><strong>HTTP/1.1</strong>, introduced in 1997, solved many problems from HTTP/1.0, allowing multiple requests over the same connection. Features like caching controls, chunked transfer, and improved error handling made websites load faster (W3C, 1999).</p>
