--- a/Topic1.html
+++ b/Topic1.html
@@ -14,7 +14,7 @@
         <a href="About.html">About</a>
         <a href="References.html">References</a>
     </nav>
-
+    <!-- Info from my paper explaining the history of HTTP -->
     <main>
         <h1>HTTP History & Early Versions</h1>
         <p>HTTP (Hypertext Transfer Protocol) is the language that web browsers and servers use to communicate. It allows your browser to request information and servers to respond with web pages, images, videos, and more (Wilde, 2025).</p>
