--- a/References.html
+++ b/References.html
@@ -15,6 +15,7 @@
         <a href="References.html">References</a>
     </nav>
 
+    <!-- All links to the websites I used to assist me with my HTML research are attached below with their associated link -->
     <main>
         <h1>References</h1>
         <ul>
