--- a/Concepts.html
+++ b/Concepts.html
@@ -15,6 +15,7 @@
         <a href="References.html">References</a>
     </nav>
 
+    <!-- Some key concepts to HTML -->
     <main>
         <h1>Key Concepts</h1>
         <ul>
