--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <main>
         <!-- Main heading on the page -->
         <h1>The Evolution and Importance of HTTP</h1>
+         <img src="images/homepage-image.png" alt="Illustration of HTTP and the web" width="500">
         <p>Welcome! This website explores HTTP, the protocol that makes the web possible. You will learn about its history, versions, key concepts, and future directions.</p>
 
         <!-- Table of contents that also leads to the other pages with each title -->
