--- a/About.html
+++ b/About.html
@@ -18,7 +18,7 @@
     <!-- A lil bit about me -->
     <main>
         <h1>About Me</h1>
-        <p>Hi! I'm Clarissa Allen. I am currently enrolled at KSU pursuing a degree in Information Technology. I am currently taking this in Intro to Web Development to enhance my web-making skills and to learn more about html! This project demonstrates basic HTML and CSS skills using the topic of HTTP. It’s designed to be clean and readable! I hope you enjoy and learn more!</p>
+        <p>Hi! I'm Clarissa Allen. I am currently enrolled at KSU pursuing a degree in Information Technology. I am currently taking this Intro to Web Development course to enhance my web-development skills and to learn more about HTML! This project demonstrates basic HTML and CSS skills using the topic of HTTP. I hope you enjoy and learn more!</p>
     </main>
 
     <footer>
